--- a/skin/frontend/default/modern/css/boxes.css
+++ b/skin/frontend/default/modern/css/boxes.css
@@ -886,6 +886,12 @@ tr.grand_total td, p.grand_total { padding-top:5px; padding-bottom:5px; }
 .tax-details td { font-size:0.91em; color:#626465; background-color:#dae1e4; }
 .tax-details-first td { border-top:1px solid #d2d8db; }
 
+/* Shopping cart tax info */
+.cart-tax-info, .cart-price { padding-right:20px; }
+.cart-tax-total { cursor:pointer; }
+.cart-tax-total { padding-right:20px; background:url(../images/bg_collapse.gif) 100% 5px no-repeat; cursor:pointer; }
+.cart-tax-total-expanded { background-position:100% -52px; }
+
 
 /* One-Page checkout */
 .one-page-checkout .box {
